--- a/content/posts/answering-questions-in-blog-post-form.mdx
+++ b/content/posts/answering-questions-in-blog-post-form.mdx
@@ -5,6 +5,7 @@ date: 2020-03-19
 tags:
   - content
   - writing
+  - digital-garden
 ---
 
 In early 2019, I began a new workflow that has been paying off
@@ -19,7 +20,7 @@ Wanting to be helpful to friends, colleagues, and aspiring
 software engineers I found myself writing long, thoughtful
 messages. This was rad because I think it at least provided
 some information that was helpful, but then what I just wrote
-was lost in the ephemerality of DMs our closed Slack communities.
+was lost in the ephemerality of DMs or closed Slack communities.
 
 So, I started answering some of the questions that are more
 generally applicable in blog post form. This paid off because
