Specify named color

--- a/content/posts/tomato.mdx
+++ b/content/posts/tomato.mdx
@@ -22,7 +22,7 @@ export const Flex = props => (
 
 <div style={{ height: 200, width: 200, minWidth: 200, maxWidth: 200, backgroundColor: 'tomato', marginRight: 20 }} />
 
-## I think that tomato is the best CSS color.
+## I think that tomato is the best named CSS color.
 
 </Flex>
 
