--- a/content/posts/tomato.mdx
+++ b/content/posts/tomato.mdx
@@ -108,4 +108,4 @@ This makes it twice as healthy for you.
 
 ## What's your favorite named color?
 
-Let me know on [Twitter](https://twitter.com/4lpine)
+Let me know on [Twitter](https://twitter.com/4lpine/status/1240691063410450434)!
