Add secret lives of color to tomato

--- a/content/posts/tomato.mdx
+++ b/content/posts/tomato.mdx
@@ -129,3 +129,8 @@ You can make everything `tomato` if you want.
 ## What's your favorite named color?
 
 Let me know on [Twitter](https://twitter.com/4lpine/status/1240691063410450434)!
+
+---
+
+If you want to actually learn about colors, and not read my tomfoolery, I suggest reading
+The Secret Lives of Color by Kassia St. Clair.
