Add missing emoji

--- a/content/posts/orange.mdx
+++ b/content/posts/orange.mdx
@@ -98,7 +98,7 @@ You can create a CSS class for `orange`.
 
 <Flex>
 
-<div style={{ height: 200, width: 200, minWidth: 200, maxWidth: 200,  borderRadius: 9999,flexGrow: 1, color: 'orange', fontWeight: 'bold', display: 'flex', alignItems: 'center', justifyContent: 'space-around', lineHeight: 1, fontSize: 80, marginRight: 20 }}><span aria-label="tomato"></span></div>
+<div style={{ height: 200, width: 200, minWidth: 200, maxWidth: 200,  borderRadius: 9999,flexGrow: 1, color: 'orange', fontWeight: 'bold', display: 'flex', alignItems: 'center', justifyContent: 'space-around', lineHeight: 1, fontSize: 80, marginRight: 20 }}><span aria-label="tomato">🧃</span></div>
 
 You can cut an orange in half and then squeeze the liquid into a cup.
 This is orange juice.
