--- a/content/posts/tomato.mdx
+++ b/content/posts/tomato.mdx
@@ -107,6 +107,21 @@ This makes it twice as healthy for you.
 
 <Flex>
 
+<div style={{ height: 200, width: 200, minWidth: 200, maxWidth: 200, background: 'linear-gradient(142deg, tomato 42%, bisque 99%)', marginRight: 20 }}></div>
+
+<div>
+
+You can combine `tomato` with another named color, `bisque`
+to make a tasty treat.
+
+Together, they make the tastiest named color gradient possible.
+
+</div>
+
+</Flex>
+
+<Flex>
+
 <div style={{ height: 200, width: 200, minWidth: 200, maxWidth: 200, flexGrow: 1, color: 'white', backgroundColor: 'tomato', fontWeight: 'bold', display: 'flex', alignItems: 'center', justifyContent: 'space-around', lineHeight: 1, fontSize: 80, marginRight: 20 }}><code>!</code></div>
 
 <div>
