--- a/content/posts/blogchains.mdx
+++ b/content/posts/blogchains.mdx
@@ -24,7 +24,7 @@ As a digital gardener over the last year or so I've definitely seen
 where this can be valuable. I've found that "megaposts" can
 easily become a time sink when they grow and grow. Over time they become
 rather daunting to pick up and can linger around for weeks before you
-press that publish button.
+**press that publish button**.
 
 I've naturally begun breaking my megaposts into smaller bits in the spirit
 of continually shipping, however I never really bothered to interlink or
