Add mdx stringify post with unified

--- a/content/posts/retrieve-mdx-ast-with-unified.mdx
+++ b/content/posts/retrieve-mdx-ast-with-unified.mdx
@@ -50,3 +50,7 @@ const inspect = require('unist-util-inspect')
 
 console.log(inspect(ast))
 ```
+
+This output is great for debugging because it's often easier to
+read when you're working on a plugin or wanting to see the AST's
+structure.
