--- a/content/posts/changesets.mdx
+++ b/content/posts/changesets.mdx
@@ -29,9 +29,9 @@ in `package.json` files. As a maintainer, you can appreciate their prudence, but
 always required you to back out that change because the tooling will automatically
 handle the version bump.
 
-Additionally, other changelog generation tools use GitHub releases which I've
-never fully gotten on board with because it's too coupled to GitHub and isn't
-represented in the code itself.
+Additionally, other changelog generation tools aren't multi-package aware or they
+use GitHub releases which I've never fully gotten on board with because it's too coupled
+to GitHub and isn't represented in the code/package itself.
 
 Enter [changesets](https://github.com/atlassian/changesets).
 
