Fix more wording

--- a/content/posts/changesets.mdx
+++ b/content/posts/changesets.mdx
@@ -37,7 +37,7 @@ Enter [changesets](https://github.com/atlassian/changesets).
 
 I was a bit skeptical at first (surprise), but was on board to give the tool a shot
 because it directly addressed versioning and changelogs _together_ which was something
-that always felt askew to me.
+that always felt askew to me before when separated.
 
 I became a Happy User very quickly.
 
