Add some related links

--- a/content/posts/recipes-interpreter.mdx
+++ b/content/posts/recipes-interpreter.mdx
@@ -182,3 +182,9 @@ ReactRecipes.render(<Recipe mode="plan" />, statefile)
 In addition to remote resources, Kyle brought up another architectural benefit that's pretty interesting. When inputs are missing we can "suspend" and prompt the user for missing details, env vars, etc. Since we already plan on supporting user inputs soon, this will be a 2 for 1!
 
 We've got time set aside next week to explore this custom React reconciler, excited to see where it can potentially go.
+
+## Related
+
+- [Building a Custom React Renderer by Sophie Alpert](https://www.youtube.com/watch?v=CGpMlWVcHok)
+- https://github.com/vadimdemedes/ink
+- https://github.com/maxchehab/phelia
