Tweak date wording

--- a/content/posts/recipes-interpreter.mdx
+++ b/content/posts/recipes-interpreter.mdx
@@ -14,7 +14,7 @@ blogchains:
 render a recipe in order to "interpret" it. This was so mind melting to me, but was something we decided
 to leave for a future exploration when shipping the MVP.
 
-Our current implementation (May 8, 2020) parses out a recipe using MDX and used the AST to create a set of
+Our current implementation (as of May 8, 2020) parses out a recipe using MDX and used the AST to create a set of
 instructions. This got us pretty far with any resources that are on disk or are flat in nature. Light and
 simple.
 
